--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "builds": [
-      { "src": "app.py", "use": "@vercel/python" }
+      { "src": "app.py", "use": "@vercel/python"}
     ],
     "routes": [
       { "handle": "filesystem" },
-      { "src": "/.*", "dest": "/app.py" }
+      { "src": "/.*", "dest": "app.py" }
     ]
   }
   
